# maestro

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  docker-compose.dev.yaml  pyproject.toml  servers.dev.yaml  test.py
maestro/: __main__.py  config.py  factory.py  ssh_client.py  text_to_png.py
maestro/routers/: __init__.py  deploy.py  start.py
ssh/: Dockerfile  entrypoint.sh
